[metadata]
name = pynightlight
version = 0.0.1
author = Kamaleen0
author_email = kamaleen0@protonmail.com
description = Small app to change screen brightness + gamma
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kamaleen0/python-nightlight
project_urls =
    Bug Tracker = https://github.com/Kamaleen0/python-nightlight
classifiers =
    Programming Language :: Python :: 3.9
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux


[options.entry_points]
console_scripts =
    pynightlight = pynightlight.__main__:main

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    dearpygui >= 0.8

[options.packages.find]
where = src
